# complex-life

./: README.md  pyproject.toml  setup.cfg
src/: extractor.py  light.py  octree.py  raytracer.py  render.py  render_slice.py
src/fcc/: __init__.py
src/minecraft/: __init__.py
src/world/: __init__.py  fcc.py  generator.py
tests/: test_extractor.py  test_fcc.py  test_hash_extractor.py  test_octree.py  test_zorder.py
