[tool.poetry]
name = "complex_life"
version = "0.1.0"
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
pyopengl = "^3.1.5"
pyopengl_accelerate = "^3.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
