[tool.poetry]
name = "complex_life"
version = "0.1.0"
description = ""
authors = ["Jan Rydzewski <flegmer@gmail.com>"]
packages = [
    {include = "extractor.py", from = "src"},
    {include = "fcc", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.0.1"
pyopengl = "^3.1.5"
#pyopengl_accelerate = "^3.1.5"
nbt = {url = "https://github.com/SupraSummus/NBT/archive/277787594f80588dc353dd05c9e4068f9a3a446f.zip"}
pillow = "^10.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"

[tool.poetry.group.dev.dependencies]
flake8-isort = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
